--- a/src/assets/styles/_register.scss
+++ b/src/assets/styles/_register.scss
@@ -217,8 +217,8 @@
     }
 }
 
-.auth-form {
-    .form-txt {
+p {
+    &.form-txt {
         font-size: 14px;
         font-weight: 500;
         font-style: italic;
