--- a/src/assets/styles/_dashboard.scss
+++ b/src/assets/styles/_dashboard.scss
@@ -692,10 +692,24 @@ p.form-txt.mt-45 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 38px;
 }
 .close-icon {
   display: none;
 }
+.family-circle-bottom {
+  background: #F4F8FF;
+  padding: 67px;
+  border-radius: 24px;
+}
+.family-circle-box {
+  width: 60%;
+  margin: auto;
+  text-align: center;
+}
+
+
+
 // responsive
 @media only screen and (max-width: 1680px) {
     .dash-hdr h3 {
